--- a/gb/nsc413.md
+++ b/gb/nsc413.md
@@ -30,7 +30,7 @@
 <a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/9/n11778295.md#1">伊朗导弹袭基地 美国国防部披露更多细节</a><br>
 <br><p><a href="https://github.com/zdqyi2905/djy/blob/master/gb/nf6092.md#1">更多......</a></p>
 </td><td VALIGN=TOP width="352">
-<a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/15/n11794534.md#1">河北禁蒸馒头炸丸子以改善污染？网民嘲讽</a><br>
+<a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/15/n11794534.md#1">保空气河北禁蒸馒头炸丸子？网民嘲讽</a><br>
 <a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/15/n11794396.md#1">陕西前副省长冯新柱微信建开心团 专门寻乐</a><br>
 <a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/15/n11794286.md#1">【翻墙必看】林郑等4港高官难逃美国制裁</a><br>
 <a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/15/n11793980.md#1">【唐靖远快评】武统台湾？中共恐有心无力</a><br>
@@ -93,7 +93,7 @@
 <tr><td VALIGN=TOP width="355"><h2><p><strong>九评共产党</strong></p></h2><a href="https://github.com/zdqyi2905/djy/blob/master/gb/4/11/19/n722529.md#1" target="_blank">【一】评共产党是什么</a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/4/11/21/n723946.md#1" target="_blank">【二】评中国共产党是怎样起家的</a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/4/11/23/n725597.md#1" target="_blank">【三】评中国共产党的暴政</a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/4/11/25/n727814.md#1" target="_blank">【四】评共产党是反宇宙的力量</a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/4/11/27/n730058.md#1" target="_blank">【五】评江泽民与中共相互利用迫害法轮功</a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/4/11/29/n731667.md#1" target="_blank">【六】评中国共产党破坏民族文化</a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/4/12/1/n733806.md#1" target="_blank">【七】评中国共产党的杀人历史</a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/4/12/3/n735942.md#1" target="_blank">【八】评中国共产党的邪教本质</a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/4/12/4/n737542.md#1" target="_blank">【九】评中国共产党的流氓本性</a></td><td VALIGN=TOP width="352"><h2><p><strong>三退大潮</strong></p></h2><strong>退出中共党、团、队总人数:
 
 ```diff
-- 共 349,873,361 人
+- 共 349,867,366 人
 ```
 </strong>
 <a href="https://github.com/zdqyi2905/djy/blob/master/gb/19/12/30/n11754554.md#1">新元赋——退党中心2020新年寄语</a><br>
